; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_functions.c_xsltRegisterAllFunctions.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_functions.c_xsltRegisterAllFunctions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"current\00", align 1
@xsltCurrentFunction = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"document\00", align 1
@xsltDocumentFunction = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [4 x i8] c"key\00", align 1
@xsltKeyFunction = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [20 x i8] c"unparsed-entity-uri\00", align 1
@xsltUnparsedEntityURIFunction = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [14 x i8] c"format-number\00", align 1
@xsltFormatNumberFunction = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [12 x i8] c"generate-id\00", align 1
@xsltGenerateIdFunction = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [16 x i8] c"system-property\00", align 1
@xsltSystemPropertyFunction = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [18 x i8] c"element-available\00", align 1
@xsltElementAvailableFunction = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [19 x i8] c"function-available\00", align 1
@xsltFunctionAvailableFunction = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xsltRegisterAllFunctions(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @xsltCurrentFunction, align 4
  %5 = call i32 @xmlXPathRegisterFunc(i32 %3, i32* bitcast ([8 x i8]* @.str to i32*), i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @xsltDocumentFunction, align 4
  %8 = call i32 @xmlXPathRegisterFunc(i32 %6, i32* bitcast ([9 x i8]* @.str.1 to i32*), i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @xsltKeyFunction, align 4
  %11 = call i32 @xmlXPathRegisterFunc(i32 %9, i32* bitcast ([4 x i8]* @.str.2 to i32*), i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @xsltUnparsedEntityURIFunction, align 4
  %14 = call i32 @xmlXPathRegisterFunc(i32 %12, i32* bitcast ([20 x i8]* @.str.3 to i32*), i32 %13)
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @xsltFormatNumberFunction, align 4
  %17 = call i32 @xmlXPathRegisterFunc(i32 %15, i32* bitcast ([14 x i8]* @.str.4 to i32*), i32 %16)
  %18 = load i32, i32* %2, align 4
  %19 = load i32, i32* @xsltGenerateIdFunction, align 4
  %20 = call i32 @xmlXPathRegisterFunc(i32 %18, i32* bitcast ([12 x i8]* @.str.5 to i32*), i32 %19)
  %21 = load i32, i32* %2, align 4
  %22 = load i32, i32* @xsltSystemPropertyFunction, align 4
  %23 = call i32 @xmlXPathRegisterFunc(i32 %21, i32* bitcast ([16 x i8]* @.str.6 to i32*), i32 %22)
  %24 = load i32, i32* %2, align 4
  %25 = load i32, i32* @xsltElementAvailableFunction, align 4
  %26 = call i32 @xmlXPathRegisterFunc(i32 %24, i32* bitcast ([18 x i8]* @.str.7 to i32*), i32 %25)
  %27 = load i32, i32* %2, align 4
  %28 = load i32, i32* @xsltFunctionAvailableFunction, align 4
  %29 = call i32 @xmlXPathRegisterFunc(i32 %27, i32* bitcast ([19 x i8]* @.str.8 to i32*), i32 %28)
  ret void
}

declare dso_local i32 @xmlXPathRegisterFunc(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
